Add Flyway migration, entities and JPA repositories

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -33,11 +33,15 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- (Optional) In-memory DB for development/testing -->
+        <!-- In-memory DB & migration for development/testing -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
         </dependency>
 
         <!-- Testing -->
